<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonbule">

        <ImageView
            android:id="@+id/addmessagetback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@mipmap/news_info_back_arrow01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="修改资料"
            android:textColor="@color/white"
            android:textSize="17sp" />
        <ImageView
            android:id="@+id/tijiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/submit_icon"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/linecolor"></LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:clickable="true"
                android:onClick="edit" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/dianhua"
                    android:textColor="@color/blackcolor" />

                <EditText
                    android:id="@+id/dianhua"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/txt_bg"
                    android:digits="0123456789"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textSize="13dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:clickable="true"
                android:onClick="edit" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/QQ"
                    android:textColor="@color/blackcolor" />

                <EditText
                    android:id="@+id/qq"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/txt_bg"
                    android:digits="0123456789"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textSize="13dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:clickable="true"
                android:onClick="edit" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/email"
                    android:textColor="@color/blackcolor" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/txt_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textSize="13dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:clickable="true"
                android:onClick="edit" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/zhuzhi"
                    android:textColor="@color/blackcolor" />

                <EditText
                    android:id="@+id/zhuzhi"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/txt_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textSize="13dp" />
            </RelativeLayout>

            <!--<Button-->

                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginLeft="2dp"-->
                <!--android:layout_marginRight="2dp"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:background="@drawable/btn_bg"-->
                <!--android:text="提交"-->
                <!--android:textColor="@color/white" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>